--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			<div class="skills" id="skills">
 				<h1 class="title text-center" >Skills</h1>
 				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 " align="center">
-					<img src="images/c-lang.png" class="img-responsive img3"/>
+					<img src="images/c.png" class="img-responsive img3"/>
 					<h2>C-Language</h2>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 " align="center">
