--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 								<h1 class="alert alert-success text-center">Me</h1>
 							</div>
 							<div class="modal-body">
-									<img src="images/G1.jpg" class="img-responsive"  />
+									<img src="images/g1.jpg" class="img-responsive"  />
 							</div>
 							<div class="modal-footer">
 								<button class="btn btn-danger" data-dismiss="modal">Close</button>
