--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<div class="about" id="about">	
 				<h1 class="title text-center">About</h1>
 				<div class="col-lg-offset-1 col-lg-3 col-md-5 col-sm-12 col-xs-12 ">
-					<img src="images/BSR.jpg" class="img-responsive img2" align="center" />
+					<img src="images/bsr.jpg" class="img-responsive img2" align="center" />
 				</div>
 				<div class="col-lg-8 col-md-7 col-sm-12 col-xs-12 ">
 					<p class="introduction text-justify">Hello...<br/>
