--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<div class="about" id="about">	
 				<h1 class="title text-center">About</h1>
 				<div class="col-lg-offset-1 col-lg-3 col-md-5 col-sm-12 col-xs-12 ">
-					<img src="images/bsr.jpg" class="img-responsive img2" align="center" />
+					<img src="images/center.jpg" class="img-responsive img2" align="center" />
 				</div>
 				<div class="col-lg-8 col-md-7 col-sm-12 col-xs-12 ">
 					<p class="introduction text-justify">Hello...<br/>
@@ -283,7 +283,7 @@
 								<h1 class="alert alert-success text-center">Family</h1>
 							</div>
 							<div class="modal-body">
-								<img src="images/G2.jpg" class="img-responsive"/>
+								<img src="images/g2.jpg" class="img-responsive"/>
 							</div>
 							<div class="modal-footer">
 								<button class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -302,7 +302,7 @@
 								<h1 class="alert alert-success text-center">Brother & Sister</h1>
 							</div>
 							<div class="modal-body">
-								<img src="images/G3.jpg" class="img-responsive"/>
+								<img src="images/g3.jpg" class="img-responsive"/>
 							</div>
 							<div class="modal-footer">
 								<button class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -321,7 +321,7 @@
 								<h1 class="alert alert-success text-center">Friend</h1>
 							</div>
 							<div class="modal-body">
-								<img src="images/G4.jpg" class="img-responsive"/>
+								<img src="images/g4.jpg" class="img-responsive"/>
 							</div>
 							<div class="modal-footer">
 								<button class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -340,7 +340,7 @@
 								<h1 class="alert alert-success text-center">College Friends</h1>
 							</div>
 							<div class="modal-body">
-								<img src="images/G5.jpg" class="img-responsive " />
+								<img src="images/g5.jpg" class="img-responsive " />
 							</div>
 							<div class="modal-footer">
 								<button class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -359,7 +359,7 @@
 								<h1 class="alert alert-success text-center">Fysagar planting plants</h1>
 							</div>
 							<div class="modal-body">
-								<img src="images/G6.jpg" class="img-responsive"/>
+								<img src="images/g6.jpg" class="img-responsive"/>
 							</div>
 							<div class="modal-footer">
 								<button class="btn btn-danger" data-dismiss="modal">Close</button>
