--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					<h2>C-Language</h2>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 " align="center">
-					<img src="images/HTML.png" class="img-responsive img3"  />
+					<img src="images/html.png" class="img-responsive img3"  />
 					<h2>HTML</h2>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12" align="center">
