--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 					<a href="https://www.instagram.com/badalsingh2582/" target="_new"><button class="ImgIcon" id="Ig"></button></a>
 				</div>
 			</div>
-			<h3 class="text-center"><i class="fa fa-copyright" >Copyright Badal Singh Rawat 2022.Doveloper</i></h3>
+			<h3 class="text-center"><i class="fa fa-copyright" >Copyright 2022 | All Rights Reserved Designed by : Badal Singh Rawat</i></h3>
 		</div>
 	</div>
 	</body>
