--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 <!--- Contect Section --->
 	<div class="container-fluid ">
 		<h1 class="title text-center" id="contect">Contect</h1>
-		<h2>Thank You for Visiting my profile.Please Comment Your Ideas.</h2>
+		<h2 class="text-center">Thank You for Visiting my profile.Please Comment Your Ideas.</h2>
 		<div class="contect" >
 			<div class=" col-lg-6 col-md-12 col-sm-12 col-xs-12 " >
 				<div class=" col-lg-12 " >
