--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 					<a href="https://www.instagram.com/badalsingh2582/" target="_new"><button class="ImgIcon" id="Ig"></button></a>
 				</div>
 			</div>
-			<h3 class="text-center"><i class="fa fa-copyright" >Copyright 2022 | All Rights Reserved Designed by : Badal Singh Rawat</i></h3>
+			<h4 class="text-center"><i class="fa fa-copyright" ></i>Copyright 2022 | All Rights Reserved Designed by : Badal Singh Rawat</h4>
 		</div>
 	</div>
 	</body>
