--- a/index.html
+++ b/index.html
@@ -256,18 +256,18 @@
 		<!-- Gallary-model -->
 		<!-- image-1 -->
 			<div class="container-fluid ">
-				<div class="modal fade" id="G1" data-backdrop="static" data-keyboard="false">
-					<div class="modal-dialog modal-lg">
-						<div class="modal-content">
+				<div class="modal fade " id="G1" data-backdrop="static" data-keyboard="false">
+					<div class="modal-dialog modal-md">
+						<div class="modal-content modal-i">
 							<div class="modal-header text-right">
 								<button class="btn " data-dismiss="modal"><i class="glyphicon glyphicon-remove"></i></button>
-								<h1 class="alert alert-success text-center">Me</h1>
+								<h2 class=" text-center">Me</h2>
 							</div>
 							<div class="modal-body">
 									<img src="images/g1.jpg" class="img-responsive"  />
 							</div>
 							<div class="modal-footer">
-								<button class="btn btn-danger" data-dismiss="modal">Close</button>
+								<button class="btn btn-danger btn-d" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -276,17 +276,17 @@
 		<!-- image-2 -->
 			<div class="container-fluid ">
 				<div class="modal fade" id="G2" data-backdrop="static" data-keyboard="false">
-					<div class="modal-dialog modal-lg">
-						<div class="modal-content">
+					<div class="modal-dialog modal-md">
+						<div class="modal-content modal-i">
 							<div class="modal-header text-right">
 								<button class="btn " data-dismiss="modal"><i class="glyphicon glyphicon-remove"></i></button>
-								<h1 class="alert alert-success text-center">Family</h1>
+								<h2 class=" text-center">Family</h2>
 							</div>
 							<div class="modal-body">
 								<img src="images/g2.jpg" class="img-responsive"/>
 							</div>
 							<div class="modal-footer">
-								<button class="btn btn-danger" data-dismiss="modal">Close</button>
+								<button class="btn btn-danger btn-d" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -295,17 +295,17 @@
 		<!-- image-3 -->
 			<div class="container-fluid ">
 				<div class="modal fade" id="G3" data-backdrop="static" data-keyboard="false">
-					<div class="modal-dialog modal-lg">
-						<div class="modal-content">
+					<div class="modal-dialog modal-md">
+						<div class="modal-content modal-i"">
 							<div class="modal-header text-right">
 								<button class="btn " data-dismiss="modal"><i class="glyphicon glyphicon-remove"></i></button>
-								<h1 class="alert alert-success text-center">Brother & Sister</h1>
+								<h2 class=" text-center">Brother & Sister</h2>
 							</div>
 							<div class="modal-body">
 								<img src="images/g3.jpg" class="img-responsive"/>
 							</div>
 							<div class="modal-footer">
-								<button class="btn btn-danger" data-dismiss="modal">Close</button>
+								<button class="btn btn-danger btn-d" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -314,17 +314,17 @@
 		<!-- image-4 -->
 			<div class="container-fluid ">
 				<div class="modal fade" id="G4" data-backdrop="static" data-keyboard="false">
-					<div class="modal-dialog modal-lg">
-						<div class="modal-content">
+					<div class="modal-dialog modal-md">
+						<div class="modal-content modal-i"">
 							<div class="modal-header text-right">
 								<button class="btn " data-dismiss="modal"><i class="glyphicon glyphicon-remove"></i></button>
-								<h1 class="alert alert-success text-center">Friend</h1>
+								<h2 class="  text-center">Friend</h2>
 							</div>
 							<div class="modal-body">
 								<img src="images/g4.jpg" class="img-responsive"/>
 							</div>
 							<div class="modal-footer">
-								<button class="btn btn-danger" data-dismiss="modal">Close</button>
+								<button class="btn btn-danger btn-d" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -333,17 +333,17 @@
 		<!-- image-5 -->
 			<div class="container-fluid ">
 				<div class="modal fade" id="G5" data-backdrop="static" data-keyboard="false">
-					<div class="modal-dialog modal-lg">
-						<div class="modal-content">
+					<div class="modal-dialog modal-md">
+						<div class="modal-content modal-i">
 							<div class="modal-header text-right">
-								<button class="btn " data-dismiss="modal"><i class="glyphicon glyphicon-remove"></i></button>
-								<h1 class="alert alert-success text-center">College Friends</h1>
+								<button class="btn btn-d" data-dismiss="modal"><i class="glyphicon glyphicon-remove"></i></button>
+								<h2 class="  text-center">College Friends</h2>
 							</div>
 							<div class="modal-body">
 								<img src="images/g5.jpg" class="img-responsive " />
 							</div>
 							<div class="modal-footer">
-								<button class="btn btn-danger" data-dismiss="modal">Close</button>
+								<button class="btn btn-danger btn-d" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -352,17 +352,17 @@
 		<!-- image-6 -->
 			<div class="container-fluid ">
 				<div class="modal fade" id="G6" data-backdrop="static" data-keyboard="false">
-					<div class="modal-dialog modal-lg">
-						<div class="modal-content">
+					<div class="modal-dialog modal-md">
+						<div class="modal-content modal-i">
 							<div class="modal-header text-right">
 								<button class="btn " data-dismiss="modal"><i class="glyphicon glyphicon-remove"></i></button>
-								<h1 class="alert alert-success text-center">Fysagar planting plants</h1>
+								<h2 class="alert text-center">Fysagar planting plants</h2>
 							</div>
 							<div class="modal-body">
 								<img src="images/g6.jpg" class="img-responsive"/>
 							</div>
 							<div class="modal-footer">
-								<button class="btn btn-danger" data-dismiss="modal">Close</button>
+								<button class="btn btn-danger btn-d" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -371,7 +371,7 @@
 <!--- Contect Section --->
 	<div class="container-fluid ">
 		<h1 class="title text-center" id="contect">Contect</h1>
-		<h2 class="text-center">Thank You for Visiting my profile.Please Comment Your Ideas.</h2>
+		<h3 class="text-center">Thank You for Visiting my profile.Please Comment Your Ideas.</h3>
 		<div class="contect" >
 			<div class=" col-lg-6 col-md-12 col-sm-12 col-xs-12 " >
 				<div class=" col-lg-12 " >
@@ -402,7 +402,7 @@
 				</div>
 			</div>
 			<div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center " >
-				<button class="btn btn-success btn-lg submit">Submit</button>
+				<button class="btn btn-lg submit  btn-d">Submit</button>
 			</div>
 			<div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center " >
 				<div class="text-center ">
@@ -412,7 +412,7 @@
 					<a href="https://www.instagram.com/badalsingh2582/" target="_new"><button class="ImgIcon" id="Ig"></button></a>
 				</div>
 			</div>
-			<h4 class="text-center">Copyright 2022 | All Rights Reserved Designed by : Badal Singh Rawat</h4>
+			<h4 class="text-center">Copyright 2022 | All Rights Reserved Designed by : Badal Singh Rawat.</h4>
 		</div>
 	</div>
 	</body>
