--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<div class="img1"></div>
 					</div>	
 					<div class="name ">
-						<div class="welcome">WELCOME</div>
+						<div class="welcome">WELCOME..</div>
 						<div class="iam">I'm Badal Singh Rawat</div>
 						<div class="A"> a Coder And Designer</div>
 					</div>
@@ -113,15 +113,33 @@
 					<p class="introduction text-justify">Hello...<br/>
 						My Name is Badal Singh Rawat. I was Born and raised in Ajmer Rajsthan.I am currently live in ajmer. I have complete my higher Education Mahatma Gandhi Government Senior Secondary School, Vaishali Nagar, Ajmer. I am Currently perswing 'Bachelor of Computer Applications' (BCA) Course from <a href="https://starinfotechcollege.com/">"Star Infotech college" </a>Ajmer. My life aim to become to a high  and good Developer.
 					</p>
+					<div class="col-lg-12 col-mg-12 col-sm-12 col-sx-12 ab_table">
+						<div class="table-responsive">
+							<table class="table table-bordered ab_table" >
+								<tbody>
+									<tr>
+										<th>Father's Name:</th>
+										<td>Mr.Laxman Singh Rawat</td>
+									</tr>
+									<tr>
+										<th>Mother's Name:</th>
+										<td>Mrs. Laxmi Devi</td>
+									</tr>
+									
+								</tbody>
+							</table>	
+						</div>	
+					</div>
 				</div>		
-			</div>	
+			</div>
 		</div>
 <!-- Education Section -->
 		<div class="container-fluid">
 			<div class="education" id="education">
 				<h1 class="title text-center">Education</h1>
 				<div class="table-responsive">
-					<table class="table table-bordered" >
+				<div class="col-lg-12 col-mg-12 col-sm-12 col-sx-12 ">
+					<table class="table table-bordered edu_table" >
 						<tbody>
 						<tr>
 							<th>Qualification</th>
@@ -150,6 +168,7 @@
 						</tr>
 					</tbody>
 					</table>
+				</div>	
 				</div>	
 			</div>	
 		</div>
