--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<div class="name ">
 						<div class="welcome">WELCOME..</div>
 						<div class="iam">I'm Badal Singh Rawat</div>
-						<div class="A"> a Coder And Designer</div>
+						<div class="A"> A Coder And Designer</div>
 					</div>
 			</header>
 		</div>	
@@ -125,6 +125,18 @@
 										<th>Mother's Name:</th>
 										<td>Mrs. Laxmi Devi</td>
 									</tr>
+									<tr>
+										<th>D.O.B.:</th>
+										<td>25-August-2002</td>
+									</tr>
+									<tr>
+										<th>Email :</th>
+										<td class="email">Badalsingh2582@gmail.com</td>
+									</tr>
+									<tr>
+										<th>Contect :</th>
+										<td>7014643316</td>
+									</tr>
 									
 								</tbody>
 							</table>	
@@ -138,12 +150,11 @@
 			<div class="education" id="education">
 				<h1 class="title text-center">Education</h1>
 				<div class="table-responsive">
-				<div class="col-lg-12 col-mg-12 col-sm-12 col-sx-12 ">
 					<table class="table table-bordered edu_table" >
 						<tbody>
 						<tr>
 							<th>Qualification</th>
-							<td >10th</td>
+							<td>10th</td>
 							<td>12th</td>
 						</tr>
 						<tr>
@@ -168,7 +179,6 @@
 						</tr>
 					</tbody>
 					</table>
-				</div>	
 				</div>	
 			</div>	
 		</div>
