--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			</header>
 		</div>	
 <!-- About Section -->
-		<div class="container-fluid ">
+		<div class="container-fluid about">
 			<div class="about" id="about">	
 				<h1 class="title text-center">About</h1>
 				<div class="col-lg-offset-1 col-lg-3 col-md-5 col-sm-12 col-xs-12 ">
@@ -137,7 +137,6 @@
 										<th>Contect :</th>
 										<td>7014643316</td>
 									</tr>
-									
 								</tbody>
 							</table>	
 						</div>	
@@ -252,7 +251,7 @@
 				</div>
 				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 ">
 					<div class=" col-lg-12 gallary g2 G-hover" >
-						<h1 class="text-center">Familiy</h1>
+						<h1 class="text-center">Selfy</h1>
 						<button class="btn btn-success" data-toggle="modal" data-target="#G2">Open</button>
 					</div>
 				</div>
@@ -309,7 +308,7 @@
 						<div class="modal-content modal-i">
 							<div class="modal-header text-right">
 								<button class="btn " data-dismiss="modal"><i class="glyphicon glyphicon-remove"></i></button>
-								<h2 class=" text-center">Family</h2>
+								<h2 class=" text-center">Selfy</h2>
 							</div>
 							<div class="modal-body">
 								<img src="images/g2.jpg" class="img-responsive"/>
